Сделать addBook_Success в BookServiceTest